@@ -119,7 +119,7 @@ public class FSGID extends SGID implements KryoSerializable {
     }
 
     private String padZeros(long input, int totalPlaces) throws Exception {
-        String strInput = new Long(input).toString();
+        String strInput = Long.valueOf(input).toString();
         if (strInput.length() > totalPlaces) {
             throw new Exception("Integer " + input + " is larger than total places of " + totalPlaces + " so padding this string failed.");
         }
